# trustgrade

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
corpus/expansion/: README.md  RESULTS.txt  arb_bundle.json  assemble.py  build_and_exec_arms.py  expansion_stats.py  objectives.json  run_ds_arms_expansion.py  score_expansion.py  specs.py  verify_obj.py
corpus/expansion/arms/: arms_ds.json  arms_exec.json  frontier_verdicts.json  gate_items.json
corpus/expansion/batches/: batch_alu.json  batch_arith.json  batch_bitmanip.json  batch_cdc.json  batch_cdc2.json  batch_comb.json  (+8 more)
corpus/mbpp_crossdomain/: README.md  RESULTS.txt  build_mbpp_corpus.py  py_exec.py  run_ds_judge.py  run_free_arms.py  score_mbpp.py
docs/: PROVENANCE.md  RESULTS.md  claims_audit.md
examples/arbiter/: alt_token.v  buggy_starvation.v  property_tb.v  reference.v
experiment/: README.md  build_gate_xl.py  build_submissions.py  characterize.py  corpus_run.py  diag_metric.py  paper_stats.py  run_ds_arms_xl.py  run_exec_arms_xl.py  scaffold_validate.py  score_gatexl.py  score_judge.py  slice_grader.py  trustgrade.py  tutor_gate.py  tutor_gate2.py
figures/src/: gen_fig8.py  gen_figures.py
manuscript/: DATA_CONSOLIDATED.md  MANUSCRIPT.html  MANUSCRIPT.md  MANUSCRIPT_zh.html  MANUSCRIPT_zh.md  appendix_c_objectives.md
prompts/: A1_tutor.txt  A2_reviewer_gate.txt  A3_scaffold_generator.txt
scripts/: demo.py
src/trustgrade/: __init__.py  arms.py  backbone.py  diagnosis.py  gate.py  llm.py  prompts.py  scaffold.py  stats.py
tests/: test_backbone_gate.py  test_stats.py
(+4 files in other folders)
