[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "trustgrade"
version = "1.0.0"
description = "Execution-gated framework for trustworthy LLM tutoring in HDL education"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0", "matplotlib>=3.6"]

[tool.setuptools.packages.find]
where = ["src"]
